infer session headers
