# apps/api-first/api/src/runtime/session.ts
@@ -4,11 +4,8 @@ import { jsonErrorResponse } from "./operation-types";
 
 const EXAMPLE_SESSION_AUTHORIZATION = "Bearer demo-session";
 
-export function validateSession(context: Context) {
-  return (
-    context.req.raw.headers.get("authorization") ===
-    EXAMPLE_SESSION_AUTHORIZATION
-  );
+export function validateSession(token: string) {
+  return token === EXAMPLE_SESSION_AUTHORIZATION;
 }
 
 export const jsonSessionErrorResponse = (context: Context) =>
